Add main content in body of HTML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="./assets/css/reset.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Weather Dashboard</title>
   </head>
 
@@ -12,4 +12,33 @@
         <h1>Weather Dashboard</h1>
         <button>Dark/Light</button>
     </header>
+
+    <main>
+      <div>
+        <form>
+          <input type="text" placeholder="Search city..." name="search">
+          <button type="submit">Search</button>
+        </form>
+      </div>
+      <section>
+        <p>Forecast for...</p>
+        <button>Today</button>
+        <button>Next 5 days</button>
+        <div>Today</div>
+        <div>Rest of week</div>
+      </section>
+      <section>
+        <p>Map</p>
+      </section>
+      <section>
+        <h2>Recently searched</h2>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
+      </section>
+    </main>
   </body>
