Add weather cards for 5 day forecast

--- a/index.html
+++ b/index.html
@@ -45,3 +45,59 @@
             </div>
           </div>
           
+          <!-- Make smaller weather cards for the 5 day forecast -->
+          <div class="card col-9 flex-row border-0 mt-5 row">
+            <div class="card mx-2 col">
+              <div id="card-day-1" class="card-body">
+                <h5 class="card-title date">24th</h5>
+                <img class="card-img-bottom" src="http://openweathermap.org/img/wn/10d@4x.png" alt="Weather image for current conditions"/> 
+                <p class="card-text rain">Rain</p>
+                <p class="card-text temp">Temp: <span></span>°C</p>
+                <p class="card-text wind">Wind: <span></span>m/s</p>
+                <p class="card-text humidity">Humidity: <span></span>%</p>
+              </div>
+            </div>
+            <div class="card mx-2 col">
+              <div id="card-day-2" class="card-body">
+                <h5 class="card-title date">24th</h5>
+                <img class="card-img-bottom" src="http://openweathermap.org/img/wn/10d@4x.png" alt="Weather image for current conditions"/> 
+                <p class="card-text rain">Rain</p>
+                <p class="card-text temp">Temp: <span></span>°C</p>
+                <p class="card-text wind">Wind: <span></span>m/s</p>
+                <p class="card-text humidity">Humidity: <span></span>%</p>
+              </div>
+            </div>
+            <div class="card mx-2 col">
+              <div id="card-day-3" class="card-body">
+                <h5 class="card-title date">24th</h5>
+                <img class="card-img-bottom" src="http://openweathermap.org/img/wn/10d@4x.png" alt="Weather image for current conditions"/> 
+                <p class="card-text rain">Rain</p>
+                <p class="card-text temp">Temp: <span></span>°C</p>
+                <p class="card-text wind">Wind: <span></span>m/s</p>
+                <p class="card-text humidity">Humidity: <span></span>%</p>
+              </div>
+            </div>
+            <div class="card mx-2 col">
+              <div id="card-day-4" class="card-body">
+                <h5 class="card-title date">24th</h5>
+                <img class="card-img-bottom" src="http://openweathermap.org/img/wn/10d@4x.png" alt="Weather image for current conditions"/> 
+                <p class="card-text rain">Rain</p>
+                <p class="card-text temp">Temp: <span></span>°C</p>
+                <p class="card-text wind">Wind: <span></span>m/s</p>
+                <p class="card-text humidity">Humidity: <span></span>%</p>
+              </div>
+            </div>
+            <div class="card mx-2 col">
+              <div id="card-day-5" class="card-body">
+                <h5 class="card-title date">24th</h5>
+                <img class="card-img-bottom" src="http://openweathermap.org/img/wn/10d@4x.png" alt="Weather image for current conditions"/> 
+                <p class="card-text rain">Rain</p>
+                <p class="card-text temp">Temp: <span></span>°C</p>
+                <p class="card-text wind">Wind: <span></span>m/s</p>
+                <p class="card-text humidity">Humidity: <span></span>%</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
