Add recent searches list

--- a/index.html
+++ b/index.html
@@ -101,3 +101,17 @@
         </div>
       </div>
       
+      <!-- Add a list of recent searches on the right side of the page -->
+      <div class="col-2">
+        <h2>Recently searched</h2>
+        <ul id="recent-searches" class="list-group">
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</main>
