--- a/index.html
+++ b/index.html
@@ -115,3 +115,13 @@
     </div>
   </div>
 </main>
+
+<!-- Center footer text -->
+<footer class="w-100 footer mt-5 text-center col-11">&copy; 505laura</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="./assets/js/script.js"></script>
+</body>
+</html>
